fixing the writing for clarity, updating the explanation of pull

--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -461,12 +461,12 @@ knitr::include_graphics("img/separate_function.jpeg")
 ```
 
 ``` {r}
-lang_tidy <- separate(lang_messy_longer,
+tidy_lang <- separate(lang_messy_longer,
   col = value,
   into = c("most_at_home", "most_at_work"),
   sep = "/"
 )
-lang_tidy
+tidy_lang
 ```
 
 
@@ -497,13 +497,13 @@ variable is stored as a `character`. We can set `convert = TRUE` to convert the
 
 
 ``` {r}
-lang_tidy <- separate(lang_messy_longer,
+tidy_lang <- separate(lang_messy_longer,
   col = value,
   into = c("most_at_home", "most_at_work"),
   sep = "/", 
   convert = TRUE
 )
-lang_tidy
+tidy_lang
 ```
 
 Now we see `<int>` appears under our columns, `most_at_home` and `most_at_work`,
@@ -532,12 +532,12 @@ values.
 ### Using `select` helpers to extract columns
 
 Suppose we wanted to select only the columns `language`, `region`,
-`most_at_home` and `most_at_work` from the `lang_tidy` data set. We can
+`most_at_home` and `most_at_work` from the `tidy_lang` data set. We can
 use the `select` function to choose the columns that we want and assign it to a
 data frame:
 
 ``` {r}
-selected_columns <- select(lang_tidy, language, region, most_at_home, most_at_work)
+selected_columns <- select(tidy_lang, language, region, most_at_home, most_at_work)
 selected_columns
 ```
 
@@ -547,11 +547,11 @@ use a "select helper". Select helpers are operators that make it easier for
 us to select columns. For instance, we can use a select helper to choose a
 range of columns rather than typing each column name out. To do this, we use the
 colon (`:`) operator to denote the range. For example, to get all the columns in
-the `lang_tidy` data frame from `language` to `most_at_work` we pass
+the `tidy_lang` data frame from `language` to `most_at_work` we pass
 `language:most_at_work` as the second argument to the `select` function.
 
 ``` {r}
-column_range <- select(lang_tidy, language:most_at_work)
+column_range <- select(tidy_lang, language:most_at_work)
 column_range
 ```
 
@@ -561,12 +561,12 @@ data sets.
 
 Suppose instead we wanted to extract columns that followed a particular pattern
 rather than just selecting a range. Let's say we wanted only to select the
-columns `most_at_home` and `most_at_work`. There are some helpers, which allow
+columns `most_at_home` and `most_at_work`. There are helpers, which allow
 us to select variables based on their names. Here we can use the `select` helper
 `starts_with` to choose only the columns that start with the word "most":
 
 ``` {r 02-select-helpers}
-select(lang_tidy, starts_with("most"))
+select(tidy_lang, starts_with("most"))
 ```
 
 We could also have chosen the columns containing an underscore `_` by adding
@@ -574,12 +574,12 @@ We could also have chosen the columns containing an underscore `_` by adding
 the columns we want contain underscores and the others don't.
 
 ``` {r 02-select-helper-contains}
-select(lang_tidy, contains("_"))
+select(tidy_lang, contains("_"))
 ```
 
 There are many different `select` helpers, which are very handy for selecting
-variables based on certain criteria. Check out the resource in the additional
-resources section for a complete list of `select` helpers.
+variables based on certain criteria. Check out the Additional
+Resources section at the end of the chapter for a comprehensive resource on `select` helpers.
 
 ## Using `filter` to extract rows
 
@@ -587,49 +587,47 @@ resources section for a complete list of `select` helpers.
 
 Recall we can use the `filter` function to obtain the subset of rows with
 desired values from a data frame. Again, our first argument is the name of the
-data frame object, `lang_tidy`. The second argument is a logical
-statement to use when filtering the rows. Here, for example, we'll say that we
-are interested in rows where the category is "Official languages". We use the
-*equivalency operator* (`==`) to compare the values of the `category` column
-with the value `"Official languages"`. With these arguments, `filter` returns a
+data frame object, `tidy_lang`. The second argument is a logical
+statement to use when filtering the rows. Suppose we are only interested in official 
+languages in this data set. We use the *equivalency operator* (`==`) to compare the values of the `category` column with the value `"Official languages"`. With these arguments, `filter` returns a
 data frame with all the columns of the input data frame but only the rows we
 asked for in our logical filter statement.
 
 ``` {r}
-official_langs <- filter(lang_tidy, category == "Official languages")
+official_langs <- filter(tidy_lang, category == "Official languages")
 official_langs
 ```
 
 ### Using `filter` to extract rows with `!=`
 
 What if we want all the other language categories in the data set *except* for
-those in the "Official languages" category? We can accomplish this with the `!=`
-logical operator, which means "NOT EQUAL TO". So if we want to find all the rows
-where the `category` does NOT equal "Official languages" we write the code
+those in the "Official languages" category? We can accomplish this with the `!=` 
+operator, which means "not equal to". So if we want to find all the rows
+where the `category` does *not* equal "Official languages" we write the code
 below.
 
 ``` {r}
-filter(lang_tidy, category != "Official languages")
+filter(tidy_lang, category != "Official languages")
 ```
 
-### Using `filter` to extract rows with `&` or `,`
+### Using `filter` to extract rows with `&` or `,` {#filter-and}
 
-Let's suppose we want to look at only the rows for English in Vancouver. Here we
+Let's suppose we want to look at only the rows for French in Montréal. Here we
 want to filter the data set to find rows that satisfy multiple conditions
 simultaneously. We can do this with `&`, which is a logical operator meaning
-"AND". We are filtering the `official_langs` data frame where the `region ==
-"Vancouver"` AND the `language == "English"`.
+"and". We are filtering the `official_langs` data frame where the `region ==
+"Montréal"` *and* the `language == "French"`.
 
 ``` {r}
-filter(official_langs, region == "Vancouver" & language == "English")
+filter(official_langs, region == "Montréal" & language == "French")
 ```
 
-Notice that we can accomplish the same thing using a comma `,` instead of the
-ampersand sign `&`. The function treats the comma `,` between the logical
-statements as an "AND".
+Notice that we can accomplish the same thing using a comma (`,`) instead of the
+ampersand sign (`&`). The filter function treats the comma (`,`) between the logical
+statements as an "and".
 
 ``` {r}
-filter(official_langs, region == "Vancouver" , language == "English")
+filter(official_langs, region == "Montréal" , language == "French")
 ```
 
 ### Using `filter` to extract rows with `|`
@@ -637,9 +635,9 @@ filter(official_langs, region == "Vancouver" , language == "English")
 Suppose we were interested in the rows for only the Albertan cities in our data
 set (Edmonton and Calgary). We can't use `&` as we did above because `region`
 cannot be both Edmonton and Calgary simultaneously. Instead, we can use the `|`
-logical operator, which gives us the cases where one condition OR another
-condition OR both are satisfied. In the code below, we ask R to return the rows
-where the `region` columns are equal to "Calgary" OR "Edmonton".
+logical operator, which gives us the cases where one condition *or* another
+condition *or* both are satisfied. In the code below, we ask R to return the rows
+where the `region` columns are equal to "Calgary" *or* "Edmonton".
 
 ``` {r}
 filter(official_langs, region == "Calgary" | region == "Edmonton")
@@ -663,7 +661,10 @@ vector. Here we are filtering if any of the five cities ("Toronto", "Montréal",
 column.
 
 ``` {r}
-filter(region_data, region %in% c("Toronto", "Montréal", "Vancouver", "Calgary", "Edmonton"))
+five_cities <- filter(region_data, 
+                      region %in% c("Toronto", "Montréal", "Vancouver", "Calgary", "Edmonton"))
+five_cities
+
 ```
 
 > **What's the difference between `==` and `%in%`?** Let's suppose we have two
@@ -689,7 +690,7 @@ census_popn <- 35151728
 most_french <- 2669195
 ```
 
-We see that `r format(most_french, scientific = FALSE, big.mark = ",")` people
+We saw in section \@ref(filter-and) that `r format(most_french, scientific = FALSE, big.mark = ",")` people
 reported speaking French in Montréal as their primary language at home. If we
 are interested in finding the languages in regions with higher numbers of people
 who speak it as their primary language at home than French in Montréal then we
@@ -754,7 +755,7 @@ variables anything you'd like.
 knitr::include_graphics("img/mutate_function.jpeg")
 ```
 
-Below we use `mutate` to convert the columns `most_at_home` and `most_at_home`
+Below we use `mutate` to convert the columns `most_at_home` and `most_at_work`
 to numeric data types in the `official_langs` data set as described in figure
 \@ref(fig:img-mutate):
 
@@ -791,13 +792,13 @@ pull(population)
 
 We can see in the table that
 `r format(number_most_home, scientific = FALSE, big.mark = ",")` people reported
-speaking English in Toronto as their primary language at home according to
+speaking English in Toronto as their primary language at home, according to
 the 2016 Canadian census. What does this number mean to us? To understand this
 number, we need context. In particular, how many people were in Toronto when
 this data was collected? From the 2016 Canadian census profile, the population
 of Toronto was reported to be
 `r format(toronto_popn, scientific = FALSE, big.mark = ",")` people. The number
-of people who report that English as their primary language at home is much more
+of people who report that English was their primary language at home is much more
 meaningful when we report it in this context. We can even go a step further and
 transform this count to a relative frequency or proportion. We can do this by
 dividing the number of people reporting a given language as their primary
@@ -807,19 +808,24 @@ English in the 2016 Canadian census was
 `r format(round(number_most_home/toronto_popn, 2), scientific = FALSE, big.mark = ",")`
 in Toronto.
 
-To find out the populations of each city we will first filter the `region_data`
-for only the rows where region is equal to one of our desired cities. Then we arrange it 
-according to the population size and use the `pull` 
-function, which takes a column in a data frame and transforms it into a vector. 
+To extract the populations of our five cities we will first arrange the `five_cities`
+data set that we created above according to the population size (from largest to smallest) 
+using the `arrange` function.
 
 ``` {r find-city-populations}
-city_populations <- region_data |> 
-  filter(region %in% c("Toronto", "Montréal", "Vancouver", "Calgary", "Edmonton")) |> 
-  arrange(desc(population)) |> 
-  pull(population)
+ordered_cities <-  arrange(five_cities, 
+                           desc(population)) 
+ordered_cities
+```
+Then we will use the `pull` function, which extracts a column in a data frame 
+and transforms it into a vector. We use `pull` instead of `select` because we 
+want the population values in a vector rather than a tibble, which would be the 
+output of using `select`. 
+```{r}
+city_populations <- pull(ordered_cities, 
+                         population)
 city_populations
 ```
-
 Then we use `mutate` to
 calculate the proportion of people reporting a given language as their primary
 language at home for all the languages in the `official_langs` data set by
@@ -827,7 +833,7 @@ dividing the column by our vector of city populations. We give the mutated
 column a new name `most_at_home_proportion`, which will create a new column in
 our data set.
 
-```{r, include = FALSE}
+```{r, include = TRUE}
 official_langs <- mutate(official_langs, 
                          most_at_home_proportion = most_at_home / city_populations )
 
