--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -714,7 +714,7 @@ official_langs <- mutate(official_langs,
   most_at_work = as.character(most_at_work)
 )
 ```
-
+ 
 In section \@ref(separate), when we first read in our data and separated our
 columns the variables were "character" data types. We used the `convert`
 argument to convert our columns to the desired data types. However, suppose we
@@ -789,7 +789,6 @@ pull(population)
 ```
 
 
-
 We can see in the table that
 `r format(number_most_home, scientific = FALSE, big.mark = ",")` people reported
 speaking English in Toronto as their primary language at home, according to
@@ -810,7 +809,10 @@ in Toronto.
 
 To extract the populations of our five cities we will first arrange the `five_cities`
 data set that we created above according to the population size (from largest to smallest) 
-using the `arrange` function.
+using the `arrange` function. Recall this function takes column names as
+input and orders the rows in the data frame in ascending order based on the
+values in the columns. There we need to add `desc` in front of the `population` 
+variable to order the rows in descending order. 
 
 ``` {r find-city-populations}
 ordered_cities <-  arrange(five_cities, 
@@ -818,8 +820,8 @@ ordered_cities <-  arrange(five_cities,
 ordered_cities
 ```
 Then we will use the `pull` function, which extracts a column in a data frame 
-and transforms it into a vector. We use `pull` instead of `select` because we 
-want the population values in a vector rather than a tibble, which would be the 
+and transforms it into a vector. We use `pull` instead of `select` because for the 
+next step we want the population values as a vector rather than a tibble, which would be the 
 output of using `select`. 
 ```{r}
 city_populations <- pull(ordered_cities, 
@@ -868,9 +870,9 @@ symbol and the mutation on the right side. Let's consider just Toronto to start.
 We want to take the `most_at_home` value for English in Toronto
 (`r format(toronto_eng, scientific = FALSE, big.mark = ",")`) and divide it by
 Toronto's population
-(`r format(toronto_popn, scientific = FALSE, big.mark = ",")`). We also want to
+(`r format(toronto_popn, scientific = FALSE, big.mark = ",")`). Likewise, we want to
 divide the `most_at_home` value for French in Toronto
-(`r format(toronto_fr, scientific = FALSE, big.mark = ",")`) and divide it by
+(`r format(toronto_fr, scientific = FALSE, big.mark = ",")`) and by
 Toronto's population. So when `region == Toronto` (the *condition*), we want to
 apply `most_at_home/5928040` (the *mutation*). We do the same for the other
 cities, which is what you see in the code below.
@@ -893,11 +895,13 @@ accomplish the same thing!
 
 ## Creating a visualization with tidy data
 
-Now that we have cleaned and wrangled our data, we can visualize how many people
-speak each of Canada's two official languages (English and French) as their
-primary language at home in these 5 regions. We can use `ggplot` to create our
-data visualization. Here we create a bar chart to represent the proportions for
-each region, and colour the proportions by language.
+Now that we have cleaned and wrangled our data, we can make visualizations or do 
+statistical analyses to answer questions about our data! Let's suppose we want to
+answer the question: what proportion of people in each city speak Canada's official 
+languages as their primary language at home in these five cities? Since our data is
+cleaned already, in a few short lines of code, we can use `ggplot` to create a
+data visualization to answer this question! Here we create a bar chart to represent the proportions for
+each region and color the proportions by language.
 
 ``` {r 02-plot}
 ggplot(
@@ -959,22 +963,22 @@ from left to right) in the *opposite order* in which they are computed by R
 (above, `mutate` happens first, then `filter`, then `select`). It is also just a
 really long line of code to read in one go.
 
-The *pipe operator* `|>` solves this problem, resulting in cleaner and
-easier-to-follow code. `|>` in built into R so you don't need to load any
+The *pipe operator* (`|>`) solves this problem, resulting in cleaner and
+easier-to-follow code. `|>` is built into R so you don't need to load any
 packages to use it. The code below accomplishes the same thing as the previous
 two code blocks:
 
-``` {r eval = F}
+``` {r eval = FALSE}
 output <- data |>
-mutate(new_col = old_col * 2) |>
-filter(other_col > 5) |>
-select(new_col)
+  mutate(new_col = old_col * 2) |>
+  filter(other_col > 5) |>
+  select(new_col)
 ```
 
 > Note: The `|>` pipe operator was inspired by a previous version of the pipe
 > operator, `%>%`. The `%>%` pipe operator is not built into R and needs to be
 > loaded via an external R package. There are some other drawbacks to using
-> `%>%`, which are beyond the scope of this textbook. Be aware that `%>%` exists
+> `%>%`, which are beyond the scope of this textbook. Just be aware that `%>%` exists
 > since you may see it used in some books or other sources. However, in this
 > textbook, we will be using the base R pipe operator syntax, `|>`.
 
@@ -992,12 +996,12 @@ of how to use it in data analysis.
 
 ### Using `|>` to combine `filter` and `select`
 
-Let's work with our tidy `lang_home_tidy` data set from above, which contains
+Let's work with our tidy `tidy_lang` data set from section \@ref(separate), which contains
 the number of Canadians reporting their primary language at home and work for
 five major cities (Toronto, Montréal, Vancouver, Calgary and Edmonton):
 
 ``` {r, warning=FALSE, message=FALSE}
-lang_home_tidy
+tidy_lang
 ```
 
 Suppose we want to create a subset of the data with only the languages and
@@ -1007,7 +1011,7 @@ create a data frame called `van_data` that contains only values for Vancouver.
 We then use `select` on this data frame to keep only the variables we want:
 
 ``` {r}
-van_data <- filter(lang_home_tidy, region == "Vancouver")
+van_data <- filter(tidy_lang, region == "Vancouver")
 van_data
 van_data_selected <- select(van_data, language, most_at_home)
 van_data_selected
@@ -1019,14 +1023,14 @@ object to store the output from `filter`. Instead we can directly send the
 output of `filter` to the input of `select`:
 
 ``` {r}
-van_data_selected <- filter(lang_home_tidy, region == "Vancouver") |>
-select(language, most_at_home)
+van_data_selected <- filter(tidy_lang, region == "Vancouver") |> 
+  select(language, most_at_home)
 van_data_selected
 ```
 
 But wait - why does our `select` function call look different in these two
-examples? When you use the pipe, the output of the function on the left is
-automatically provided as the first argument for the function on the right, and
+examples? When you use the pipe, the output of the first function is
+automatically provided as the first argument for the function that comes after it, and
 thus you do not specify that argument in that function call. In the code above,
 the first argument of `select` is the data frame we are `select`-ing from, which
 is provided by the output of `filter`.
@@ -1037,40 +1041,39 @@ approach is more clear and readable.
 ### Using `|>` with more than two functions
 
 The `|>` can be used with any function in R. Additionally, we can pipe together
-more than two functions. For example, we can pipe together three functions to
-order the rows by counts of the language most spoken at home for only the counts
-that are more than 10,000 and only include the region, language and count of
-Canadians reporting their primary language at home in our table.
+more than two functions. For example, we can pipe together three functions to: 
+
+- order the rows by counts of the language most spoken at home from smallest to largest
+- only include the counts that are more than 10,000 and 
+- only include the region, language and count of Canadians reporting their primary language at home columns in our table.
 
 To order by counts of the language most spoken at home we will use the
-`tidyverse` function, `arrange`. Recall this function takes column names as
-input and orders the rows in the data frame in ascending order based on the
-values in the columns. Here we use only one column for sorting (`most_at_home`),
+`tidyverse` function, `arrange`. Here we use only one column for sorting (`most_at_home`),
 but more than one can also be used. To do this, list additional columns
 separated by commas. The order they are listed in indicates the order in which
 they will be used for sorting. This is much like how an English dictionary sorts
 words: first by the first letter, then by the second letter, and so on.
 
 ``` {r}
-large_region_lang <- filter(lang_home_tidy, most_at_home > 10000) |>
+large_region_lang <- filter(tidy_lang, most_at_home > 10000) |>
   select(region, language, most_at_home) |>
   arrange(most_at_home)
 large_region_lang
 ```
 
 > **Note:** You might also have noticed that we split the function calls across
-> lines after the pipe, similar as to when we did this earlier in the chapter
-> for long function calls. Again this is allowed and recommeded, especially when
-> the piped function calls would create a long line of code. Doing this makes
-> your code more readable. When you do this it is important to end each line
+> lines after the pipe, similar to when we did this earlier in the chapter
+> for long function calls. Again this is allowed and recommended, especially when
+> the piped function calls create a long line of code. Doing this makes
+> your code more readable. When you do this, it is important to end each line
 > with the pipe operator `|>` to tell R that your code is continuing onto the
 > next line.
 
-We can also pipe the data frame into the same sequence of functions rather than
+We can also pipe the *data frame* into the same sequence of functions rather than
 using it as the first argument of the first function and we get the same result:
 
 ``` {r}
-large_region_lang <- lang_home_tidy |> 
+large_region_lang <- tidy_lang |> 
   filter(most_at_home > 10000) |>
   select(region, language, most_at_home) |>
   arrange(most_at_home)
@@ -1078,10 +1081,11 @@ large_region_lang
 ```
 
 Now that we've shown you the pipe operator as an alternative to storing
-temporary objects, does this mean you should *never* store temporary objects?
-Not necessarily! There are times when you will still want to store intermediate
-objects. For example, you might want to save your prepared data before feeding
-it into a plot function so you can iteratively change the plot without having to
+temporary objects and composing code, does this mean you should *never* store 
+temporary objects or compose code? Not necessarily! There are times when you will 
+still want to do these things. For example, you might store temporary objects 
+because you want to save prepared data before feeding it into a plot function 
+so you can iteratively change the plot without having to
 redo all of your data transformations each time you create a new plot.
 Additionally, piping many functions can be overwhelming, so you may also want to
 store a temporary object midway through and pipe that into more functions after
@@ -1092,15 +1096,16 @@ that.
 ### Calculating summary statistics:
 
 As a part of many data analyses, we need to calculate a summary value for the
-data (a *summary statistic*). A useful `dplyr` function for doing this is
-`summarize`. Examples of summary statistics we might want to calculate are the
-number of observations, the average/mean value for a column, the minimum value
-for a column, etc. Below we show how to use the `summarize` function to
+data (a *summary statistic*). Examples of summary statistics we might want to calculate are the
+number of observations, the average/mean value for a column, the minimum value etc. 
+A useful `dplyr` function for calculating summary statistics is
+`summarize`, where the first argument is the data frame and the proceeding arguments
+are the summaries we want to perform. Below we show how to use the `summarize` function to
 calculate the minimum and maximum number of Canadians reporting a particular
 language as their primary language at home:
 
 ``` {r}
-lang_summary <- summarize(lang_home_tidy,
+lang_summary <- summarize(tidy_lang,
   min_most_at_home = min(most_at_home),
   most_most_at_home = max(most_at_home)
 )
@@ -1113,13 +1118,13 @@ primary language at home is spoken by
 `r format(lang_summary$most_most_at_home[1], scientific = FALSE, big.mark = ",")`
 people.
 
-<!-- Suppose we wanted to find the maximum value for all the numeric columns in the `lang_home_tidy` data set.  -->
+<!-- Suppose we wanted to find the maximum value for all the numeric columns in the `tidy_lang` data set.  -->
 
 <!-- We could apply `summarize` in the same way that we did above to find the maximum values:  -->
 
 <!-- ```{r} -->
 
-<!-- lang_summary_max <- summarize(lang_home_tidy,  -->
+<!-- lang_summary_max <- summarize(tidy_lang,  -->
 
 <!--              most_most_at_home = max(most_at_home),  -->
 
@@ -1129,11 +1134,11 @@ people.
 
 <!-- ``` -->
 
-<!-- The approach above is a valid way to do this, but if we had many numeric columns in our data set then this method would take a lot of time since we would have to explicitly write out the name of each column! A faster and less error-prone way to apply function(s) to columns that satisfy a certain condition is to use the `summarize_if` function. The first argument is the data set we want to summarize (`lang_home_tidy`). The second argument is the required condition, here if a particular column is numeric then the function will be applied. The third argument is the function we want to summarize with, here `max`. Therefore we write: -->
+<!-- The approach above is a valid way to do this, but if we had many numeric columns in our data set then this method would take a lot of time since we would have to explicitly write out the name of each column! A faster and less error-prone way to apply function(s) to columns that satisfy a certain condition is to use the `summarize_if` function. The first argument is the data set we want to summarize (`tidy_lang`). The second argument is the required condition, here if a particular column is numeric then the function will be applied. The third argument is the function we want to summarize with, here `max`. Therefore we write: -->
 
 <!-- ```{r 02-summarize-if} -->
 
-<!-- summarize_if(lang_home_tidy,  -->
+<!-- summarize_if(tidy_lang,  -->
 
 <!--              is.numeric,  -->
 
@@ -1159,7 +1164,7 @@ grouping. Here we use only one column for grouping (`region`), but more than one
 can also be used. To do this, list additional columns separated by commas.
 
 ``` {r}
-lang_summary_by_region <- group_by(lang_home_tidy, region) |>
+lang_summary_by_region <- group_by(tidy_lang, region) |>
 summarize(
   min_most_at_home = min(most_at_home),
   max_most_at_home = max(most_at_home)
@@ -1167,20 +1172,21 @@ summarize(
 lang_summary_by_region
 ```
 
-Notice that `group_by` on its own doesn't change the way the data looks, but instead it 
-changes how other functions, such as `summarize` work with the data, as we saw above.  
+Notice that `group_by` on its own doesn't change the way the data looks. In the output below 
+the data set looks the same, and it doesn't *appear* to be grouped by `region`. 
+Instead, `group_by` simply changes how other functions work with the data, as we saw with `summarize` above.  
 
 ```{r}
-group_by(lang_home_tidy, region)
+group_by(tidy_lang, region)
 ```
 
 ## Iterating over columns of a data frame
 
 Where should you turn when you discover the next step in your data
-wrangling/cleaning process requires you to apply a function to each column in a
+wrangling/cleaning process requires you to apply a function to *every* column in a
 data frame? The process of repeating a function, say on different columns or data sets,
 is called **iteration**. For example, suppose you wanted to
-know the maximum value of each column in a data frame. You could use `summarize`
+know the maximum value of every column in a data frame. You could use `summarize`
 as discussed above. However, this becomes inconvenient when you have many
 columns, as `summarize` requires you to type out a column name and a data
 transformation for each summary statistic you want to calculate.
@@ -1188,9 +1194,9 @@ transformation for each summary statistic you want to calculate.
 ### Using `summarize` and `across` to iterate 
 
 In cases, where you want to apply the same data transformation to all
-columns, it is more efficient to use `dplyr`'s `across` function to apply a
-transformation to each column. For example, let's find the maximum value of each
-column of the `region_lang`. First, let’s peek at the data to familiarize
+columns, it is more efficient to use `dplyr`'s `across` function with `summarize` to apply a
+transformation to each column. For example, let's find the maximum value of each of the numeric
+columns of the `region_lang.csv` data set. First, let’s read in and peek at the data to familiarize
 ourselves with it:
 
 ``` {r 02-preview-region-data, message = FALSE}
@@ -1333,8 +1339,7 @@ built-in R statistical functions when NA's are present...).
 map_df(region_with_nas, max)
 ```
 
-We need to add the argument `na.rm = TRUE` to the `max` function so that we get a more useful
-value than `NA` returned. We will add these additional arguments to the end of our call to the
+We need to add the argument `na.rm = TRUE` to the end of our call to
 `map` and they will be passed to the function that we are mapping. An example of
 this is shown below:
 
@@ -1358,8 +1363,10 @@ For instance, suppose we want to know the maximum value between `mother_tongue`,
 `most_at_home`, `most_at_work` and `lang_known` for each language in Vancouver.
 In other words, we want to apply the `max` function row-wise. We will use the aptly 
 named function `rowwise` to accomplish this task. First, we `filter` the data for 
-only the languages in Vancouver. We also `select` specific columns so we can see 
-all the columns in the data frame, but note that this step is not strictly necessary. 
+only the languages in Vancouver. We also `select` specific columns simply 
+so we can see all the columns in the data frame output 
+but note that this step is not strictly necessary.
+
 ```{r vancouver_filter}
 vancouver_lang <- region_lang |>
   filter(region == "Vancouver") |> 
@@ -1376,15 +1383,21 @@ vancouver_lang |>
   mutate(maximum = max(c(mother_tongue, most_at_home, most_at_work, lang_known)))
 ```
 Notice if we used `mutate` without `rowwise`, we would have computed the maximum 
-value across *all* rows rather than the maximum value for *each* row. Therefore 
+value across *all* rows rather than the maximum value for *each* row. Therefore in the output below
 `r format(vancouver_lang |>  mutate(maximum = max(c(mother_tongue, most_at_home, most_at_work, lang_known))) |> slice(1) |> pull(maximum),  scientific = FALSE, big.mark = ",")` is reported as the maximum value in every single row since it is 
-the maximum value among all the rows, so this code is not doing what we want. 
+the maximum value among *all* the rows, so this code is not doing what we want. 
 
 ```{r}
 vancouver_lang |> 
   mutate(maximum = max(c(mother_tongue, most_at_home, most_at_home, lang_known)))
 ```
-Cleaning and wrangling data can be a very time-consuming process, however, it is a critical step in any data analysis. We have explored many different functions for wrangling data into a tidy format. Table \@ref(tab:summary-functions-table) summarizes some of the key wrangling functions we learned in this chapter. 
+Cleaning and wrangling data can be a very time-consuming process, however, 
+it is a critical step in any data analysis. We have explored many different
+functions for cleaning and wrangling data into a tidy format. 
+Table \@ref(tab:summary-functions-table) summarizes some of the key wrangling 
+functions we learned in this chapter. In the following chapters, you will 
+learn how you can take this tidy data and do so much more with it to answer your 
+burning data science questions!
 
 Table: (#tab:summary-functions-table) Summary of wrangling functions 
 
@@ -1403,17 +1416,17 @@ Table: (#tab:summary-functions-table) Summary of wrangling functions
 
 ## Additional resources
 
-  - As we briefly mentioned earlier in a note, the `tidyverse` is actually a *R
+  - As we mentioned earlier, `tidyverse` is actually a *R
     meta package*: it installs and loads a collection of R packages that all
     follow the tidy data philosophy we discussed above. One of the `tidyverse`
-    packages is `dplyr` - a data wrangling workhorse. You have already met six
-    of the dplyr function (`select`, `filter`, `mutate`, `arrange`, `summarize`,
-    and `group_by`). To learn more about those six and meet a few more useful
+    packages is `dplyr` - a data wrangling workhorse. You have already met many
+    of `dplyr`'s functions (`select`, `filter`, `mutate`, `arrange`, `summarize`,
+    and `group_by`). To learn more about these functions and meet a few more useful
     functions, we recommend you checkout [this
     chapter](http://stat545.com/block010_dplyr-end-single-table.html#where-were-we)
     of the Data wrangling, exploration, and analysis with R book.
   - The [`dplyr` page on the tidyverse website](https://dplyr.tidyverse.org/) is
-    where you should look if you want to learn more about the functions in this
+    another resource to learn more about the functions in this
     chapter, the full set of arguments you can use, and other related functions.
     The site also provides a very nice cheat sheet that summarizes many of the
     data wrangling functions from this chapter.
