minor grammar, spelling changes

--- a/setup.Rmd
+++ b/setup.Rmd
@@ -18,9 +18,9 @@ By the end of the chapter, readers will be able to:
 
 ## Installing software on your own computer
 
-In this section we will provide instructions for installing the software 
-required by this book on our own computer. 
-Given that installation instructions can vary widely based on the computer setup
+This section will provide instructions for installing the software required by 
+this book on our own computers. 
+Given that installation instructions can vary widely based on the computer setup,
 we have created instructions for multiple operating systems.
 In particular, the installation instructions below have been verified to work
 on a computer that:
@@ -33,7 +33,7 @@ on a computer that:
 **For macOS users only:** Apple recently changed the default shell in the terminal to Zsh.
 However, the programs we need work better with the Bash shell. Thus, we recommend you change 
 the default shell to Bash by opening the terminal 
-([how to video](https://youtu.be/5AJbWEWwnbY)) and typing:
+([how-to video](https://youtu.be/5AJbWEWwnbY)) and typing:
 
 ```
 chsh -s /bin/bash
@@ -48,17 +48,17 @@ As shown in the version control chapter, Git is a very useful tool for version
 controlling your projects, as well as sharing your work with others.
 
 **Windows:** To install
-Git on Windows go to <https://git-scm.com/download/win> and download the windows 
-version of git. Once the download has finished, run the installer and accept 
+Git on Windows, go to <https://git-scm.com/download/win> and download the Windows 
+version of Git. Once the download has finished, run the installer and accept 
 the default configuration for all pages.
 
-**MacOS:** To install Git on Mac OS open the terminal and type the following command:
+**MacOS:** To install Git on Mac OS, open the terminal and type the following command:
 
 ```
 xcode-select --install
 ```
 
-**Ubuntu:** To install Git on Ubuntu open the terminal and type the following commands:
+**Ubuntu:** To install Git on Ubuntu, open the terminal and type the following commands:
 
 ```
 sudo apt update
@@ -68,7 +68,7 @@ sudo apt install git
 
 ### Miniconda
 
-To run Jupyter notebooks on our computers we will need to install a program 
+To run Jupyter notebooks on our computers, we will need to install a program 
 similar to the one we used as our web-based platform. One such program is 
 JupyterLab. But JupyterLab relies on Python; we can install this via
 the [miniconda Python package distribution](https://docs.conda.io/en/latest/miniconda.html).
@@ -78,7 +78,7 @@ the [Python 3.8 64-bit version from here](https://repo.anaconda.com/miniconda/Mi
 Once the download has finished, run the installer and accept the default 
 configuration for all pages. After installation, you can open the Anaconda Prompt
 by opening the Start Menu and searching for the program called 
-"Anaconda Prompt (miniconda3)". When this opens you will see a prompt similar to 
+"Anaconda Prompt (miniconda3)". When this opens, you will see a prompt similar to 
 `(base) C:\Users\your_name`. 
 
 **MacOS:** To install miniconda on MacOS, download 
@@ -95,7 +95,7 @@ commands:
 bash path/to/Miniconda3-latest-Linux-x86_64.sh
 ```
 
-> Note: most often this file is downloaded to the Downloads directory, and thus the command will look like this:
+> Note: most often, this file is downloaded to the Downloads directory, and thus the command will look like this:
 > ```
 > bash Downloads/Miniconda3-latest-Linux-x86_64.sh
 > ```
@@ -104,7 +104,7 @@ bash path/to/Miniconda3-latest-Linux-x86_64.sh
 The instructions for the installation will then appear:
 
 (1) Press Enter.
-(2) Once the licence agreement shows, you can press space scroll down, or press `q` to skip reading it.
+(2) Once the licence agreement shows, you can press space scroll down or press `q` to skip reading it.
 (3) Type `yes` and press enter to accept the licence agreement.
 (4) Press enter to accept the default installation location.
 (5) Type `yes` and press enter to instruct the installer to run `conda init`, which makes `conda` available from the terminal/shell.
@@ -207,7 +207,7 @@ tinytex::tlmgr_install(c("eurosym",
 This section will help you
 save your work from the JupyterHub web-based platform to your own computer. 
 
-First in JupyterHub, open a terminal by clicking "terminal" in the Launcher tab. 
+First, in JupyterHub, open a terminal by clicking "terminal" in the Launcher tab. 
 Next, type the following in the terminal to create a 
 compressed `.zip` archive for the work you are interested in downloading:
 
