updating image in preface to match chapter numbers, minor changes to writing in setup chapter

--- a/setup.Rmd
+++ b/setup.Rmd
@@ -2,8 +2,8 @@
 
 ## Overview
 
-Throughout this book, we have assumed that you are working on a web-based platform
-(e.g., JupyterHub) that already has Jupyter, R, a number of R packages, and Git set up and ready to use. 
+Throughout this book, we have assumed that you are working on a web-based platform, 
+such as JupyterHub, which already has Jupyter, R, several R packages, and Git set up and ready to use. 
 In this chapter, you'll learn how to install all of that software on your own computer in case
 you don't have a preconfigured JupyterHub available to you.
 
@@ -44,8 +44,9 @@ terminal for this to take effect.
 
 ### Git
 
-As shown in the version control chapter, Git is a very useful tool for version
-controlling your projects, as well as sharing your work with others.
+As shown in Chapter \@ref(Getting-started-with-version-control), Git is a very useful tool for version
+controlling your projects, as well as sharing your work with others. Here's how to install Git on 
+the following operating systems: 
 
 **Windows:** To install
 Git on Windows, go to <https://git-scm.com/download/win> and download the Windows 
@@ -68,9 +69,8 @@ sudo apt install git
 
 ### Miniconda
 
-To run Jupyter notebooks on our computers, we will need to install a program 
-similar to the one we used as our web-based platform. One such program is 
-JupyterLab. But JupyterLab relies on Python; we can install this via
+To run Jupyter notebooks on our computers, we will need to install a program, such as the 
+web-based platform JupyterLab. But JupyterLab relies on Python; we can install this via
 the [miniconda Python package distribution](https://docs.conda.io/en/latest/miniconda.html).
 
 **Windows:** To install miniconda on Windows, download 
@@ -142,7 +142,7 @@ conda install -c conda-forge -y r-irkernel
 To improve the experience of using R in JupyterLab, we will add an extension 
 that allows us to setup keyboard shortcuts for inserting text.
 By default, this extension creates shortcuts for inserting two of the most common R 
-operators: `<-` and `%>%`. Type the following in the Anaconda Prompt (Windows)
+operators: `<-` and `|>`. Type the following in the Anaconda Prompt (Windows)
 or terminal (MacOS and Ubuntu) and press  enter:
 
 ```
