minor wording change

--- a/setup.Rmd
+++ b/setup.Rmd
@@ -69,8 +69,8 @@ sudo apt install git
 
 ### Miniconda
 
-To run Jupyter notebooks on our computers, we will need to install a program, such as the 
-web-based platform JupyterLab. But JupyterLab relies on Python; we can install this via
+To run Jupyter notebooks on our computers, we will need to install the web-based platform JupyterLab. 
+But JupyterLab relies on Python; we can install this via
 the [miniconda Python package distribution](https://docs.conda.io/en/latest/miniconda.html).
 
 **Windows:** To install miniconda on Windows, download 
