--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -18,27 +18,29 @@ By the end of the chapter, readers will be able to:
     each other
   - describe the types of data that can be stored in integer, double, character,
     logical, and factor vectors in R
-  - recall and use the following functions and operators for their
+  - recall and use the following functions for their
     intended data wrangling tasks:
-      - `select`
+      - `across`
+      - `c`
       - `filter`
+      - `group_by`
+      - `select`
+      - `map`
       - `mutate`
-      - `|>`
-      - `c()`
+      - `pull`
+      - `pivot_longer`
+      - `pivot_wider`
+      - `rowwise`
+      - `separate`
+      - `summarize`
+  - recall and use the following operators for their
+    intended data wrangling tasks:
       - `==` 
+      - `%in%`
       - `!`
       - `&` 
       - `|`
-      - `%in%`
-      - `pivot_longer`
-      - `pivot_wider`
-      - `separate`
-      - `summarize`
-      - `group_by`
-      - `across`
-      - `rowwise`
-      - `map`
-      - `pull`
+      - `|>` and `%>%`
 
 ## Data frames and Vectors
 
