combined row and observation figure into one, as the explanation seemed to long and drawn out.

--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -52,35 +52,32 @@ and manipulate these objects in our data analysis.
 
 ### What is a data frame?
 
-A **data frame** is a table-like structure and is a very common method for storing 
-data in R. We have actually seen and worked with data frames already in 
-Chapter \@ref(reading), but we will define it more precisely in this chapter. 
-But first, we need to introduce a few commonly used terms in statistics:
+A **data frame** is a table-like structure 
+and is a very common format for storing data in R. 
+We have already seen and worked with data frames in Chapter \@ref(reading), 
+and here we will get to know them in more detail.
 
-  - **observation** - all of the quantities or a qualities we collect from a
-    given entity/object (*e.g.,* adult)
+To help prepare us to do that, 
+we need to introduce a few commonly used terms in statistics:
+
+  - **observation** - all of the quantities and/or qualities we collect from a
+    given entity/object. An example of an entity/object is a particular person.
   - **variable** - any characteristic, number, or quantity that can be measured
     or collected (*e.g.,* adult height)
   - **value** - a single collected quantity or a quality from a given
     entity/object (*e.g.,* the adult height of a particular person)
 
 From a data perspective, a data frame is a rectangle where the rows are the
-observations:
+observations and the columns are the variables:
 
 ``` {r 02-setup, include=FALSE}
 library(tidyverse)
 library(canlang)
+library(cowplot)
 ```
 
-``` {r 02-obs, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Rows are observations in a data frame", fig.retina = 2, out.width = "650"}
-knitr::include_graphics("img/obs.jpeg")
-```
-
-and the columns are the variables:
-
-
-``` {r 02-vars, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Columns are variables in a data frame", fig.retina = 2, out.width = "700"}
-knitr::include_graphics("img/vars.jpeg")
+``` {r 02-obs, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "In a data frame, rows are observations and the columns are variables. In this example data frame, the row that corresponds to the observation for the city of Vancouver is colored yellow, and the column that corresponds to the population variable is colored blue.", fig.retina = 2, out.width = "650"}
+knitr::include_graphics("img/obs_and_var/obs_and_var.001.jpeg")
 ```
 
 From a computer programming perspective, in R, a data frame is a special type of
