swapped example to be character, not integer - because we call it an integer and then we show how to create a double

--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -53,7 +53,7 @@ and manipulate these objects in our data analysis.
 ### What is a data frame?
 
 A **data frame** is a table-like structure 
-and is a very common format for storing data in R. 
+and is a very common object for storing data in R. 
 We have already seen and worked with data frames in Chapter \@ref(reading), 
 and here we will get to know them in more detail.
 
@@ -76,14 +76,14 @@ library(canlang)
 library(cowplot)
 ```
 
-``` {r 02-obs, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "In a data frame, rows are observations and the columns are variables. In this example data frame, the row that corresponds to the observation for the city of Vancouver is colored yellow, and the column that corresponds to the population variable is colored blue.", fig.retina = 2, out.width = "650"}
+``` {r 02-obs, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "In a data frame, the rows correspond to observations and the columns correspond to statistical variables. In this example data frame, the row that corresponds to the observation for the city of Vancouver is colored yellow, and the column that corresponds to the population variable is colored blue.", fig.retina = 2, out.width = "650"}
 knitr::include_graphics("img/obs_and_var/obs_and_var.001.jpeg")
 ```
 
 From a computer programming perspective, in R, a data frame is a special type of
 object whose columns are *vectors*. For example, the data
 frame in Figure \@ref(fig:02-vectors) has three vectors whose names are `region`,
-`year` and `population`.
+`year` and `population`. We will explain what vectors are in the next section.
 
 ``` {r 02-vectors, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Data frame with three vectors", fig.retina = 2, out.width = "700"}
 knitr::include_graphics("img/vectors.jpeg")
@@ -95,17 +95,17 @@ In R, **vectors** are objects that can contain one or more elements. The vector
 elements are ordered, and they must all be of the same *data type*. R has
 several different basic data types, as shown in table \@ref(tab:datatype-table).
 In the vector shown in Figure \@ref(fig:02-vector), the elements are
-of all the same type (integer):
+of all the same type (double):
 
-``` {r 02-vector, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Example of a numeric type vector", fig.retina = 2, out.width = "700"}
-knitr::include_graphics("img/vector.jpeg")
+``` {r 02-vector, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Example of a vector whose type is character.", fig.retina = 2, out.width = "700"}
+knitr::include_graphics("img/vector/vector.001.jpeg")
 ```
 
 You can create vectors in R using the concatenate `c()` function. To create the
 vector `year` as shown in Figure \@ref(fig:02-vector) we write:
 
 ``` {r}
-year <- c(2015, 2013, 2011, 2016, 2018)
+year <- c("Toronto", "Montreak", "Vancouver", "Calgary", "Ottawa")
 year
 ```
 
