fixed typo calling vector year that I changed to region

--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -102,7 +102,7 @@ knitr::include_graphics("img/vector/vector.001.jpeg")
 ```
 
 You can create vectors in R using the concatenate `c()` function. To create the
-vector `year` as shown in Figure \@ref(fig:02-vector) we write:
+vector `region`` as shown in Figure \@ref(fig:02-vector) we write:
 
 ``` {r}
 year <- c("Toronto", "Montreak", "Vancouver", "Calgary", "Ottawa")
