a few more image changes to go with the character vector example

--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -102,7 +102,7 @@ knitr::include_graphics("img/vector/vector.001.jpeg")
 ```
 
 You can create vectors in R using the concatenate `c()` function. To create the
-vector `region`` as shown in Figure \@ref(fig:02-vector) we write:
+vector `region` as shown in Figure \@ref(fig:02-vector) we write:
 
 ``` {r}
 year <- c("Toronto", "Montreak", "Vancouver", "Calgary", "Ottawa")
@@ -138,7 +138,7 @@ elements in the same list). Lists are sometimes called recursive vectors
 because lists can contain other lists. 
 
 ``` {r 02-vec-vs-list, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "A vector versus a list", fig.retina = 2, out.width = "650"}
-knitr::include_graphics("img/vec_vs_list.jpeg")
+knitr::include_graphics("img/vec_vs_list/vec_vs_list.001.jpeg")
 ```
 
 > Note that there are actually two types of vectors in R: *atomic vectors* and
@@ -165,7 +165,7 @@ associated with each student to get sorted along with each name rather than sort
 the columns independently. 
 
 ``` {r 02-dataframe, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Data frame and vector types", fig.retina = 2, out.width = "650"}
-knitr::include_graphics("img/dataframe.jpeg")
+knitr::include_graphics("img/dataframe/dataframe.001.jpeg")
 ```
 
 The functions from the `tidyverse` package that we are using often give us a
