reviewed up until Tidy data

--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -117,9 +117,9 @@ Table: (#tab:datatype-table) Basic data types in R
 | double | Numbers with decimals values | 1.2333 |
 | integer | Numbers that do not contain decimals | 1L, 20L (where "L" tells R to store as an integer) |
 | logical | A value of true and false | `TRUE`, `FALSE` |
-| factor | Used to represent data with a limited number of values | a `size` variable with levels `large`, `medium` and `small` |
+| factor | Used to represent data with a limited number of values | a `color` variable with levels `red`, `green` and `orange` |
 
-> "Numeric" is an umbrella term that includes integer and double data types.
+> Integer and double data types both fall under the class "Numeric".
 > Most of the time when working with numbers in R they will be double types. For
 > instance, a double data type is the default when you create a vector of
 > numbers using `c()`, and when you read in whole numbers via `read_csv`. There
@@ -129,12 +129,13 @@ Table: (#tab:datatype-table) Basic data types in R
 
 ### What is a list?
 
-Lists are also objects in R that have multiple elements, you can think of them
-as super-vectors. Vectors and lists differ by the requirement of element type
+Lists are also objects in R that have multiple, ordered elements, 
+you can think of them as super-vectors. 
+Vectors and lists differ by the requirement of element type
 consistency. All elements within a single vector must be of the same type (e.g.,
-all elements are integers), whereas elements within a single list can be of
-different types (e.g., characters, integers, logicals and even other lists can be
-elements in the same list). Lists are sometimes called recursive vectors 
+all elements are characters), whereas elements within a single list can be of
+different types (e.g., characters, integers, logicals, and even other lists). 
+Lists are sometimes called recursive vectors 
 because lists can contain other lists. 
 
 ``` {r 02-vec-vs-list, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "A vector versus a list", fig.retina = 2, out.width = "650"}
@@ -151,7 +152,8 @@ knitr::include_graphics("img/vec_vs_list/vec_vs_list.001.jpeg")
 
 As mentioned earlier, a data frame is a special type of object in R whose columns are vectors. 
 In particular, a data frame is really a special subtype of list where the elements 
-can only be vectors. Although the columns of a data frame can only be vectors, 
+can only be vectors, and the vectors must be of the same length. 
+Although the columns of a data frame can only be vectors, 
 and vector elements must be of the same data type, not all columns in a data frame 
 need to be of the same type. Figure \@ref(fig:02-dataframe) shows a data frame where
 the columns are vectors of different types, but the elements are the same data type
@@ -171,9 +173,10 @@ knitr::include_graphics("img/dataframe/dataframe.001.jpeg")
 The functions from the `tidyverse` package that we are using often give us a
 special class of data frame called a *tibble*. Tibbles have some additional
 features and benefits over the built-in data frame object. These include the
-ability to add useful (such as grouping, which we will discuss later) attributes
-and more predictable type preservation when subsetting. Because a tibble is just a data frame with some
-added features, we will collectively refer to both built-in R data frames and
+ability to add useful attributes (such as grouping, which we will discuss later)
+and more predictable type preservation when subsetting. 
+Because a tibble is just a data frame with some added features, 
+we will collectively refer to both built-in R data frames and
 tibbles as data frames in this book.
 
 > You can use the function `class` on a data object to assess whether a data
@@ -197,9 +200,9 @@ Table: (#tab:datastructure-table) Basic data structures in R
 
 | Data Structure | Description |
 | ---            |------------ |
-| vector | An ordered collection of one, or more, values of the *same data type* (e.g. all values are numeric). *Note: in R, a vector of length one is used to represent a single value.* |
-| data frame | A list of *vectors* of the *same length*, which has column and row names. We typically use a data frame to represent a data set. | 
-| list | An ordered collection of one, or more, values. The elements in the list can be of different data types. |
+| vector | An ordered collection of one, or more, values of the *same data type* (e.g. all values are of type character). *Note: in R, a vector of length one is used to represent a single value.* |
+| data frame | A list of *vectors* of the *same length*, which has column names. We typically use a data frame to represent a data set. | 
+| list | An ordered collection of one, or more, values. The elements in the list can be of different data types and can have names (but they are not required too). |
 
 > There are several other data structures in the R programming language (*e.g.,*
 > matrices), however, they are beyond the scope of this book.
