changed some headers to title case to be consistent

--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -42,7 +42,7 @@ By the end of the chapter, readers will be able to:
       - `|`
       - `|>` and `%>%`
 
-## Data frames and Vectors
+## Data frames and vectors
 
 We now know how to load data into R from various file formats. Given that most
 of the tools we have used to import data represent the data as a *data frame* in R, we
@@ -207,7 +207,7 @@ Table: (#tab:datastructure-table) Basic data structures in R
 > There are several other data structures in the R programming language (*e.g.,*
 > matrices), however, they are beyond the scope of this book.
 
-## Tidy Data
+## Tidy data
 
 There are many ways a tabular data set can be organized. This chapter will focus
 on introducing the *tidy data* format of organization and how to make your raw
